--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Materias primas</h5>
-                  <img class="card-img" src="./assets/products/materias.jpg" alt="Materias primas">
+                  <img class="card-img" src="./assets/products/materias_primas.jpg" alt="Materias primas">
                   <p class="card-text"></p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -158,7 +158,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Equipamiento para limpieza profesional</h5>
-                  <img class="card-img" src="./assets/products/profesional.jpg" alt="Limpieza profesional">
+                  <img class="card-img" src="./assets/products/equipamiento.jpg" alt="Limpieza profesional">
                   <p class="card-text">Carros hoteleros, Carros lavadores, Mopas, Prensa mopas, Equipo de limpieza de vidrios, etc.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -171,6 +171,50 @@
                   <h5 class="card-title">Productos químicos de limpieza profesional y doméstica</h5>
                   <img class="card-img" src="./assets/products/quimicos.jpg" alt="Químicos">
                   <p class="card-text">Hotelería, Gastronomía, Industria y Hogar.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Cuidado de la ropa</h5>
+                  <img class="card-img" src="./assets/products/ropa.jpg" alt="Ropa">
+                  <p class="card-text">Detergentes, Desmanchadores, Suavizantes y Aditivos.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Higiene institucional y cuidado personal</h5>
+                  <img class="card-img" src="./assets/products/higiene.jpeg" alt="Higiene">
+                  <p class="card-text">Shampúes, Acondicionadores, Alcohol en gel, Papel tissue y Varios.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Articulos y accesorios de limpieza</h5>
+                  <img class="card-img" src="./assets/products/profesional.jpg" alt="Articulos">
+                  <p class="card-text">Microfibras, Bolsas, Esponjas, Escobillones, Secadores y Varios.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Aromatización</h5>
+                  <img class="card-img" src="./assets/products/aromatizacion.jpg" alt="Aromatización">
+                  <p class="card-text">Aceites, Hornitos, Difusores varillas, Aromatizadores y Spray.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
               </div>
