--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Materias primas</h5>
                   <img class="card-img" src="./assets/products/materias_primas.jpg" alt="Materias primas">
-                  <p class="card-text"></p>
+                  <p class="card-text">Nuestros productos están elaborados con materias primas biodegradables.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
               </div>
@@ -192,7 +192,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Higiene institucional y cuidado personal</h5>
                   <img class="card-img" src="./assets/products/higiene.jpeg" alt="Higiene">
-                  <p class="card-text">Shampúes, Acondicionadores, Alcohol en gel, Papel tissue y Varios.</p>
+                  <p class="card-text">Champús, Acondicionadores, Alcohol en gel, Papel tissue y Varios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
               </div>
