--- a/index.html
+++ b/index.html
@@ -49,18 +49,27 @@
       <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="./assets/images/quimar1.jpeg" alt="First slide">
+            <img class="d-block w-100" src="./assets/images/quimar1.jpeg" alt="Hombre limpiando vidrio de ventana.">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="./assets/images/quimar3.jpeg" alt="Second slide">
+            <img class="d-block w-100" src="./assets/images/quimar3.jpeg" alt="Manos jabonosas debajo de grifo abierto.">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="./assets/images/quimar6.jpeg" alt="Third slide">
+            <img class="d-block w-100" src="./assets/images/quimar6.jpeg" alt="Manos con guantes de latex limpiando bacha.">
           </div>
           <div class="overlay">
             <div class="container">
               <div class="row align-items-center">
-                <div class="col-md-6 offset-md-6 text-center text-md-right">
+                <div class="col-none col-sm-none col-md-6 text-md-left">
+                  <ul style="list-style: none;">
+                    <li><h5><i class="fas fa-star"></i>&nbsp;&nbsp;CALIDAD</h5><p>Brindamos nuestros productos con la mejor calidad en el mercado.</p></li>
+                    <li><h5><i class="fas fa-feather-alt"></i>&nbsp;&nbsp;AMBIENTE</h5><p>Nuestros productos están elaborados con materias primas biodegradables.</p></li>
+                    <li><h5><i class="fas fa-bullseye"></i>&nbsp;&nbsp;DESAFÍO</h5><p>Innovar y superarnos día a día.</p></li>
+                    <li><h5><i class="fas fa-truck"></i>&nbsp;&nbsp;COBERTURA</h5><p>Nuestros productos llegan a todo el corredor atlántico desde San Clemente del Tuyú a Mar de las Pampas.</p></li>
+                  </ul>
+                </div>
+                <!-- offset-md-6 -->
+                <div class="col-md-6  text-center text-md-right">
                   <h1>QUI*MAR</h1>
                   <h2>Productos químicos industriales</h2>
                   <!--class="d-none d-md-block"-->
