ocultar columna en carousel

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="overlay">
             <div class="container">
               <div class="row align-items-center">
-                <div class="col-none col-sm-none col-md-6 text-md-left">
+                <div class="d-none d-sm-none d-md-block col-md-6 text-md-left">
                   <ul style="list-style: none;">
                     <li><h5><i class="fas fa-star"></i>&nbsp;&nbsp;CALIDAD</h5><p>Brindamos nuestros productos con la mejor calidad en el mercado.</p></li>
                     <li><h5><i class="fas fa-feather-alt"></i>&nbsp;&nbsp;AMBIENTE</h5><p>Nuestros productos están elaborados con materias primas biodegradables.</p></li>
