alto del textarea

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 </div> 
                 <div class="form-row">
                   <div class="form-group col">
-                    <textarea name="text" class="form-control form-control-lg" placeholder="¿Cuál es su consulta?"></textarea>
+                    <textarea name="text" rows="7" class="form-control form-control-lg" placeholder="¿Cuál es su consulta?" required></textarea>
                     <small class="form-text text-muted">
                       Recuerde incluir el asunto de su consulta.
                     </small>
@@ -284,7 +284,7 @@
                 </div>
                 <div class="form-row">
                   <div class="col">
-                    <button type="button" class="btn btn-quimar btn-block">Enviar</button>
+                    <button type="submit" class="btn btn-quimar btn-block">Enviar</button>
                   </div>
                 </div>
               </form>
