transicion en imagenes de cards

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                     <span class="badge badge-info">Autopolish</span>
                     <span class="badge badge-warning">Brillocar</span>
                   </div>-->
-                  <img class="card-img" src="./assets/products/automotriz.jpg" alt="Automotriz">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/automotriz.jpg" alt="Automotriz">
+                  </div>
                   <p class="card-text">Champú siliconado, Revividores, Siliconas y Accesorios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -112,7 +114,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Contenedores de residuos</h5>
-                  <img class="card-img" src="./assets/products/contenedores.jpg" alt="Contenedores">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/contenedores.jpg" alt="Contenedores">
+                  </div>
                   <p class="card-text">Pequeños y grandes volúmenes.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -123,7 +127,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Jardines y Mascotas</h5>
-                  <img class="card-img" src="./assets/products/mascotas.jpg" alt="Jardines y mascotas">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/mascotas.jpg" alt="Jardines y mascotas">
+                  </div>
                   <p class="card-text">Champús plagüicidas, Insecticidas y Control de plagas.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -134,7 +140,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Mantenimiento de Piscinas</h5>
-                  <img class="card-img" src="./assets/products/piscina.jpg" alt="Piscina">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/piscina.jpg" alt="Piscina">
+                  </div>
                   <p class="card-text">Cloros, Controladores de <abbr data-toggle="tooltip" title="Coeficiente que indica el grado de acidez o basicidad de una solución acuosa. El pH neutro es 7: si el número es mayor la solución es básica y si es menor es ácida.">pH</abbr>, Clarificadores y Accesorios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -145,7 +153,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Materias primas</h5>
-                  <img class="card-img" src="./assets/products/materias_primas.jpg" alt="Materias primas">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/materias_primas.jpg" alt="Materias primas">
+                  </div>
                   <p class="card-text">Nuestros productos están elaborados con materias primas biodegradables.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -156,7 +166,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Cuidado de pisos y muebles</h5>
-                  <img class="card-img" src="./assets/products/pisos.jpg" alt="Pisos y muebles">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/pisos.jpg" alt="Pisos y muebles">
+                  </div>
                   <p class="card-text">Ceras, Curadores, Removedores y Lustramuebles</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -167,7 +179,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Equipamiento para limpieza profesional</h5>
-                  <img class="card-img" src="./assets/products/equipamiento.jpg" alt="Limpieza profesional">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/equipamiento.jpg" alt="Limpieza profesional">
+                  </div>
                   <p class="card-text">Carros hoteleros, Carros lavadores, Mopas, Prensa mopas, Equipo de limpieza de vidrios, etc.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -178,7 +192,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Productos químicos de limpieza profesional y doméstica</h5>
-                  <img class="card-img" src="./assets/products/quimicos.jpg" alt="Químicos">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/quimicos.jpg" alt="Químicos">
+                  </div>
                   <p class="card-text">Hotelería, Gastronomía, Industria y Hogar.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -189,7 +205,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Cuidado de la ropa</h5>
-                  <img class="card-img" src="./assets/products/ropa.jpg" alt="Ropa">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/ropa.jpg" alt="Ropa">
+                  </div>
                   <p class="card-text">Detergentes, Desmanchadores, Suavizantes y Aditivos.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -200,7 +218,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Higiene institucional y cuidado personal</h5>
-                  <img class="card-img" src="./assets/products/higiene.jpeg" alt="Higiene">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/higiene.jpeg" alt="Higiene">
+                  </div>
                   <p class="card-text">Champús, Acondicionadores, Alcohol en gel, Papel tissue y Varios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -211,7 +231,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Articulos y accesorios de limpieza</h5>
-                  <img class="card-img" src="./assets/products/profesional.jpg" alt="Articulos">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/profesional.jpg" alt="Articulos">
+                  </div>
                   <p class="card-text">Microfibras, Bolsas, Esponjas, Escobillones, Secadores y Varios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
@@ -222,7 +244,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Aromatización</h5>
-                  <img class="card-img" src="./assets/products/aromatizacion.jpg" alt="Aromatización">
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/aromatizacion.jpg" alt="Aromatización">
+                  </div>
                   <p class="card-text">Aceites, Hornitos, Difusores varillas, Aromatizadores y Spray.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
