cambio texto nuestra empresa

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <h1>QUI*MAR</h1>
                   <h2>Productos químicos industriales</h2>
                   <!--class="d-none d-md-block"-->
-                  <p>Porque su negocio es único, lo ayudamos a cuidarlo como lo merece.</p>
+                  <p>Porque su negocio es único, lo ayudamos a cuidarlo como él merece.</p>
                   <a href="#" data-toggle="modal" data-target="#modalNosotros" class="btn btn-outline-light">Conózcanos</a>
                   <a class="btn btn-quimar" href="#contacto">Contáctenos</a>
                 </div>
@@ -452,6 +452,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
+        <!--
           <div class="modal-body modal-lg text-justify">
             <p><i>Estimado:</i></p>
             <p><i>Le presentamos nuestra empresa <strong>QUI*MAR</strong> dedicada a la elaboración y venta de <strong>productos químicos industriales para la limpieza e higiene institucional,</strong> con la finalidad de poder establecer lazos comerciales.</i></p>
@@ -474,6 +475,29 @@
             </ul>
             <p><i>Para información adicional, nuestras operadoras están esperando su llamado para resolver cualquier interrogante que pueda tener.</i></p>
             <p><i>Saludos cordiales</i></p>
+          </div>
+        -->
+          <div class="modal-body modal-lg text-justify">
+            <p><i>Nuestra empresa <strong>QUI*MAR</strong> se dedica a la elaboración y venta de <strong>productos químicos industriales para la limpieza e higiene institucional.</strong></i></p>
+            <p><i>Fue fundada en el año 2003, en el Partido de la Costa. Estos años de trayectoria avalan nuestra experiencia y desempeño, en el que se destacan, <strong>la atención calificada y el servicio personalizado</strong> a nuestros clientes, y <strong>la excelente relación calidad–precio</strong> de nuestros productos.</i></p>
+            <p><i>Asimismo, disponemos de una <strong>organizada estructura edilicia y logística</strong>, necesarias para la distribución de nuestros productos dentro del corredor atlántico, desde San Clemente hasta Mar de Las Pampas.</i></p>
+            <p><i>En la actualidad, nuestros productos, han ganado reconocimiento en el mercado debido a la trayectoria comercial que nos caracteriza y en especial, al logro de <strong>formulaciones de avanzada</strong>, con las que podemos destacar productos “BICOMBINADOS” y “TRICOMBINADOS”, que permiten simplificar y optimizar la limpieza institucional.</i></p>
+            <p><i>Ofrecemos permanentemente la atención personalizada por parte de dueños y empleados lo que permite que usted pueda despejar sus dudas y asesorarse correctamente sobre el uso de cada uno de nuestros productos.</i></p>
+            <p><i>Para lograr la satisfacción de nuestros clientes, brindamos atención y servicio integral, en todo lo que respecta a la limpieza y mantenimiento de diferentes áreas, contando con formulaciones propias y de avanzada para la elaboración de los productos químicos, y logrando incorporar más de 1.800 artículos gracias a fuertes y estables alianzas estratégicas con nuestros proveedores:</i></p>
+            <ul>
+              <li><strong>SYNGENTA</strong><i>ofreciendo una amplia gama de productos de laboratorio destinados al control de plagas como insecticidas y pesticidas.</i></li>
+              <li><strong>PAPELERA SAMSENG</strong><i>con un amplio surtido en papeles higiénicos, toallas intercaladas, bobinas, y dispenser;</i></li>
+              <li><strong>SUIZA</strong><i>con toda la línea de ceras acrílicas y en pasta de primera calidad, como así también la línea de curadores, quita ceras y lustramuebles;</i></li>
+              <li><strong>NUVA y ESE</strong><i>(Alemania) con Contenedores de residuos comerciales e institucionales que cumplen NORMAS europeas EN840 y certificaciones de calidad;</i></li>
+              <li><strong>ROYCO</strong><i>con Equipos para la limpieza profesional de vidrios, pisos, grandes áreas, carros de limpieza y para hotelería; </i></li>
+              <li><strong>CAPTOR</strong><i>Tapetes de recepción y para lluvia (logo opcional);</i></li>
+              <li><strong>ALPARGATAS, MEDIA NARANJA, SILVETEX, LA FLORESTAL</strong><i>con una amplia gama de productos textiles (trapos de piso, rejillas, repasadores, microfibras;</i></li>
+              <li><strong>SAMANTHA</strong><i>con una gran variedad escobillones, escobas y secadores, entre otros artículos;</i></li>
+              <li><strong>IBERIA</strong><i>con una novedosa línea de productos antihumedad y aromatizadores de placards;</i></li>
+              <li><strong>3M y VILEDA</strong><i>en sus líneas de esponjas, estropajos, guantes, cintas antideslizantes y varios artículos;</i></li>
+              <li><strong>MAVI</strong><i>con una amplia gama de productos y aparatajes para limpieza y mantenimiento de piscinas.</i></li>
+              <li><strong>AROMATIZACIÓN AMBIENTAL</strong><i>le ofrecemos potenciar su negocio a través del marketing olfativo brindando un agradable aroma a sus ambientes.</i></li>
+            </ul>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
