--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
               </li>
               <li class="nav-item">
                 <a href="#" data-toggle="modal" data-target="#modalNosotros" class="nav-link"><strong>Conózcanos</strong></a>
-              </li>              
+              </li> 
+              <li class="nav-item">
+                <a href="#" data-toggle="modal" data-target="#modalElegirnos" class="nav-link"><strong>¿Por qué elegirnos?</strong></a>
+              </li>             
               <li class="nav-item">
                 <a class="nav-link" href="#productos"><strong>Productos</strong></a>
               </li>        
@@ -507,6 +510,38 @@
       </div>
     </div>    
     <!-- /Modal Nosotros-->
+
+    <!-- Modal Elegirnos -->
+    
+    <div class="modal fade" id="modalElegirnos" tabindex="-1" role="dialog" aria-labelledby="modalElegirnosTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalElegirnosTitle">¿Por qué elegirnos?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body modal-lg text-justify">
+            <ul>
+              <li><strong>Porque entendemos los requerimientos de nuestros clientes</strong> Nuestro equipo está integrado por personas idóneas y entusiastas que desempeñan sus tareas con eficiencia, seriedad y esmero. Trabajamos para alcanzar la satisfacción de nuestros clientes y la optimización y perfeccionamiento de los servicios que brindamos. Estamos siempre dispuestos a atenderte y escucharte, para lograr comprender y resolver tus inquietudes e inconvenientes.</li>
+              <li><strong>Porque nos sentimos parte de su empresa</strong> Trabajamos en equipo con nuestros clientes; existimos por y para nuestros clientes y les servimos de manera personalizada; con dedicación, respeto, velocidad y amabilidad. Porque nuestro principal objetivo es la satisfacción del cliente</li>
+              <li><strong>Porque respetamos la relación precio-calidad</strong> Nuestros precios se ajustan a la excelente calidad de los productos y servicios que ofrecemos. Maximizamos los esfuerzos para minimizar los costos.</li>
+              <li><strong>Porque trabajamos en Innovación y Desarrollo</strong> Estamos en permanente investigación para hallar las herramientas necesarias que faciliten la tarea de limpieza tanto institucional como doméstica. Desarrollamos nuevos productos bi y tri combinados que permiten la máxima limpieza con el mayor ahorro de energías y costos.</li>
+              <li><strong>Porque nos destacamos en Honestidad e integridad</strong> La transparencia y honradez guían nuestro accionar. Trabajamos de forma consistente y ética respetando la relación con nuestros clientes, como así también con el cuidado del medio ambiente.</li>
+              <li><strong>Porque poseemos una gran Trayectoria y Experiencia</strong> Hace más de quince años que trabajamos brindando servicios de calidad a nuestros clientes, destacándonos a lo largo de ese tiempo por brindar excelente calidad en nuestros productos, servicio personalizado, y variedad de productos</li>
+              <li><strong>Porque logramos las mejores Alianzas</strong> Somos proveedores de las mejores marcas referentes del mercado. Gracias a la experiencia del equipo de trabajo que hemos logrado con nuestros proveedores, agregamos valor a las soluciones de limpieza institucional y doméstica, que nuestros clientes requieren.</li>
+            </ul>
+            <img src="./assets/brands/alianzas.png">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            <!--<button type="button" class="btn btn-quimar">Contáctenos</button>-->
+          </div>
+        </div>
+      </div>
+    </div>     
+    <!-- /Modal Elegirnos -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
