--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <title>QUI*MAR Productos Químicos Industriales</title>
+    <link href="https://fonts.googleapis.com/css?family=Lovers+Quarrel|Norican" rel="stylesheet">
   </head>
   <body data-spy="scroll" data-target="#navbar" data-offset="57">
     <!--<header>-->
@@ -73,10 +74,10 @@
                 </div>
                 <!-- offset-md-6 -->
                 <div class="col-md-6  text-center text-md-right">
-                  <h1>QUI*MAR</h1>
-                  <h2>Productos químicos industriales</h2>
+                  <h1 class="d-none d-md-block">QUI*MAR</h1>
+                  <h4 class="d-none d-md-block mb-4">Productos químicos industriales</h4>
                   <!--class="d-none d-md-block"-->
-                  <p>Porque su negocio es único, lo ayudamos a cuidarlo como él merece.</p>
+                  <p class="slogan">Porque su negocio es único, lo ayudamos a cuidarlo como él merece.</p>
                   <a href="#" data-toggle="modal" data-target="#modalNosotros" class="btn btn-outline-light">Conózcanos</a>
                   <a class="btn btn-quimar" href="#contacto">Contáctenos</a>
                 </div>
